<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Verbal Autopsy Collector</string>
    <string name="hello_world">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="downloading_lbl">Downloading</string>
    <string name="saving_lbl">Saving</string>
    <string name="fieldworkers_lbl">Field Workes</string>
    <string name="dead_individuals_lbl">Deaths</string>
    <string name="neighborhoods_lbl">Neighborhoods</string>
    <string name="households_lbl">Households</string>
    <string name="records_lbl">records</string>
    <string name="saved_lbl">Saved</string>
    <string name="sync_success_lbl">Syncronization Complete</string>
    <string name="sync_failure_lbl">Syncronization Failed</string>
    <string name="title_login">Login as Fieldworker</string>

    <!-- Strings related to login -->
    <string name="login_username_lbl">Username</string>
    <string name="login_password_lbl">Password</string>
    <string name="login_lbl">Login as a Fieldworker</string>
    <string name="login_short_lbl">Login</string>
    <string name="error_invalid_username">This username doesnt exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_syncronize_lbl">Syncronize Database</string>
    <string name="login_exit_lbl">Exit</string>
    <string name="couldnt_open_xform_lbl">Couldnt open Verbal Autopsy ODK Form</string>
    <string name="warning_lbl">Warning</string>
    <string name="odk_problem_lbl">There was a problem with ODK</string>
    <string name="update_unfinish_msg1">Form started but not saved. This form instance will be deleted. What do you want to do?</string>
    <string name="update_unfinish_pos_button">Delete form</string>
    <string name="update_unfinish_neg_button">Edit form</string>
    <string name="update_unfinish_neutral_button">Save form</string>
    <string name="update_unfinish_saved">The form was saved but not finalized, you can edit it anytime</string>
    <string name="update_xform_not_found_msg">The XForm could not be found within ODK Collect. Please make sure that it exists and it\'s named correctly.</string>
    <string name="normal_collect_lbl">Pre-Registered Deaths</string>
    <string name="collect_by_list_lbl">New Death Records</string>
    <string name="title_activity_in_field_verbal_autopsy">Autopsias de mortes não registadas</string>

</resources>
