<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_03"
    tools:context="net.manhica.verbalautopsy.activity.LoginActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:hint="@string/login_username_lbl"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#444" android:text="FWCT1" />

            <TextView
                android:id="@+id/txtViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_lbl"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/login_short_lbl"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#444"  android:text="test"/>

            <Button
                android:id="@+id/login_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_lbl"
                android:background="@drawable/keybutton_2"
                android:textStyle="bold"
                android:textColor="#444" />
            
            <Button
                android:id="@+id/login_syncronize_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_syncronize_lbl"
                android:background="@drawable/keybutton_2"
                android:textStyle="bold"
                android:textColor="#444" />
            
            <Button
                android:id="@+id/login_exit_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_exit_lbl"
                android:background="@drawable/keybutton_2"
                android:textStyle="bold"
                android:textColor="#444" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
